oop_mro/tests/trybuild/fail_base_cast_unrelated.stderr
error[E0277]: the trait bound `Cat: OopBase<Walker>` is not satisfied
  --> tests/trybuild/fail_base_cast_unrelated.rs:11:17
   |
11 |     let _ = cat.as_base::<Walker>();
   |                 ^^^^^^^ unsatisfied trait bound
   |
help: the trait `OopBase<Walker>` is not implemented for `Cat`
  --> tests/trybuild/fail_base_cast_unrelated.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Animal {}
 5 | |     class Walker {}
 6 | |     class Cat: Animal {}
   | |_____________^
help: the following other types implement trait `OopBase<Target>`
  --> tests/trybuild/fail_base_cast_unrelated.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Animal {}
 5 | |     class Walker {}
 6 | |     class Cat: Animal {}
   | |             ^
   | |             |
   | |_____________`Cat` implements `OopBase<Animal>`
   |               `Cat` implements `OopBase<Cat>`
note: required by a bound in `as_base`
  --> src/lib.rs
   |
   |     fn as_base<Target>(&self) -> &Target
   |        ------- required by a bound in this associated function
   |     where
   |         Self: OopBase<Target>,
   |               ^^^^^^^^^^^^^^^ required by this bound in `OopBaseAccess::as_base`
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
